--- a/sim_config.json
+++ b/sim_config.json
@@ -1,7 +1,11 @@
 {
-  "project_root": "/home/paul/Documents/GitHub/ShotLog",
+  "project_root": "/home/paul/Documents/GitHub/ShotLog/test_root",
   "raw_folder_name": "ELI50069_RAW_DATA",
   "motor_folder_name": "motors",
+  "sim_root": "/home/paul/Documents/GitHub/ShotLog/test_root",
+  "raw_subfolder_name": "ELI50069_RAW_DATA",
+  "motor_subfolder_name": "motors",
+  "initial_csv_path": "/home/paul/Documents/GitHub/ShotLog/initial.csv",
   "date": "2025-12-02",
   "max_delay_sec": 5.0,
   "cameras": [
