--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "test",
     "align"
   ],
-  "state_file": "eli50069_state.json",
+  "state_file": "shot_log_state.json",
   "log_dir": "rename_log",
   "check_interval_s": 0.5,
   "motor_initial_csv": "/home/paul/Documents/GitHub/ShotLog/initial.csv",
